--- a/mathselfie-react/package.json
+++ b/mathselfie-react/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.1.3",
     "dataurl-to-blob": "^0.0.1",
+    "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
