--- a/mathselfieapp/pom.xml
+++ b/mathselfieapp/pom.xml
@@ -34,6 +34,13 @@
 			<version>2.7.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.pusher/pusher-http-java -->
+		<dependency>
+			<groupId>com.pusher</groupId>
+			<artifactId>pusher-http-java</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-starter-aws -->
 		<dependency>
 			<groupId>io.awspring.cloud</groupId>
