--- a/mathselfieapp/src/main/resources/application.yml
+++ b/mathselfieapp/src/main/resources/application.yml
@@ -3,11 +3,17 @@ cloud:
     credentials:
       access: access
       secret: secret
-      region: us-east-1
+      region: ap-southeast-1
 infra:
   aws:
     sqs:
-      url: queue
+      url: sqs-url
+  pusher:
+    app-id: app-id
+    key: key-id
+    secret: secret
+    region: region
+    encrypted: true
 spring:
   application:
     name: mathselfieapp
